wrap tables in responsive div

--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol1.html
@@ -43,29 +43,31 @@
   <p>Specifically, we need to match up these names to the relational clues. As the graph network has 17 spots and there are 16 relational clues, we should try to form a chain of relationships. Some research yields the following relationships. Note that each person (except for Lacks and Franklin) appear exactly once as Person 1 and exactly once as Person 2.</p>
 
   <center>
-    <table class="table sol-table table-sm">
-      <thead style="font-weight: bold;">
-        <tr><th>Person 1</th><th>Relationship</th><th>Person 2</th></tr>
-      </thead>
-      <tbody>
-        <tr><td>HO</td><td>who appeared on the cover of the same magazine (Time) 36 years after</td><td>PAULING</td></tr>
-        <tr><td>LEWIN</td><td>who completed her postdoctoral training under</td><td>HO</td></tr>
-        <tr><td>TAUSSIG</td><td>who developed a surgical procedure (Blalock–Thomas–Taussig shunt) to treat the condition named after</td><td>FALLOT</td></tr>
-        <tr><td>OSLER</td><td>who founded the medical school (John Hopkins) attended by</td><td>TAUSSIG</td></tr>
-        <tr><td>PASTEUR</td><td>who had a famous rivalry with</td><td>KOCH</td></tr>
-        <tr><td>FALLOT</td><td>who hails from the same country (France) as</td><td>PASTEUR</td></tr>
-        <tr><td>FRAZER</td><td>who was awarded the same honour (Australian of the Year) a year after</td><td>WOOD</td></tr>
-        <tr><td>WOOD</td><td>who is a professor at the same institution (University of Western Australia) as</td><td>MARSHALL</td></tr>
-        <tr><td>APGAR</td><td>who named a neonatal assessment score after</td><td>APGAR</td></tr>
-        <tr><td>MARSHALL</td><td>who won a prize (Paul Ehrlich and Ludwig Darmstaedter Prize) named in part after</td><td>EHRLICH</td></tr>
-        <tr><td>KOCH</td><td>who won the same award (Nobel Prize in Physiology or Medicine) 91 years before</td><td>DOHERTY</td></tr>
-        <tr><td>PAULING</td><td>who worked on the structure of the same biomolecule (DNA) as</td><td>FRANKLIN</td></tr>
-        <tr><td>CUSHING</td><td>who wrote a biography about the life of</td><td>OSLER</td></tr>
-        <tr><td>LACKS</td><td>whose death (cervical cancer) could have been prevented by the vaccine developed by</td><td>FRAZER</td></tr>
-        <tr><td>EHRLICH</td><td>whose name featured in a film (<font style='font-style:italic;'>Dr. Ehrlich's Magic Bullet</font>) released a year after the death of</td><td>CUSHING</td></tr>
-        <tr><td>DOHERTY</td><td>whose name is on the workplace of</td><td>LEWIN</td></tr>
-      </tbody>
-    </table>
+    <div class="table-responsive-sm">
+      <table class="table sol-table table-sm">
+        <thead style="font-weight: bold;">
+          <tr><th>Person 1</th><th>Relationship</th><th>Person 2</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>HO</td><td>who appeared on the cover of the same magazine (Time) 36 years after</td><td>PAULING</td></tr>
+          <tr><td>LEWIN</td><td>who completed her postdoctoral training under</td><td>HO</td></tr>
+          <tr><td>TAUSSIG</td><td>who developed a surgical procedure (Blalock–Thomas–Taussig shunt) to treat the condition named after</td><td>FALLOT</td></tr>
+          <tr><td>OSLER</td><td>who founded the medical school (John Hopkins) attended by</td><td>TAUSSIG</td></tr>
+          <tr><td>PASTEUR</td><td>who had a famous rivalry with</td><td>KOCH</td></tr>
+          <tr><td>FALLOT</td><td>who hails from the same country (France) as</td><td>PASTEUR</td></tr>
+          <tr><td>FRAZER</td><td>who was awarded the same honour (Australian of the Year) a year after</td><td>WOOD</td></tr>
+          <tr><td>WOOD</td><td>who is a professor at the same institution (University of Western Australia) as</td><td>MARSHALL</td></tr>
+          <tr><td>APGAR</td><td>who named a neonatal assessment score after</td><td>APGAR</td></tr>
+          <tr><td>MARSHALL</td><td>who won a prize (Paul Ehrlich and Ludwig Darmstaedter Prize) named in part after</td><td>EHRLICH</td></tr>
+          <tr><td>KOCH</td><td>who won the same award (Nobel Prize in Physiology or Medicine) 91 years before</td><td>DOHERTY</td></tr>
+          <tr><td>PAULING</td><td>who worked on the structure of the same biomolecule (DNA) as</td><td>FRANKLIN</td></tr>
+          <tr><td>CUSHING</td><td>who wrote a biography about the life of</td><td>OSLER</td></tr>
+          <tr><td>LACKS</td><td>whose death (cervical cancer) could have been prevented by the vaccine developed by</td><td>FRAZER</td></tr>
+          <tr><td>EHRLICH</td><td>whose name featured in a film (<font style='font-style:italic;'>Dr. Ehrlich's Magic Bullet</font>) released a year after the death of</td><td>CUSHING</td></tr>
+          <tr><td>DOHERTY</td><td>whose name is on the workplace of</td><td>LEWIN</td></tr>
+        </tbody>
+      </table>
+    </div>
   </center>
 
   <p>Some of these links are tricky; for instance, there are multiple Australians, Americans and Germans, so it's not immediately clear that it's the Frenchmen who are related via "hails from the same country". Moreover, Apgar created a scale called the Apgar score.</p>
