--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
@@ -34,31 +34,33 @@
   <p>The "date" is an index we apply on the episode titles to extract letters. Note that this "date" does NOT correspond to the episode number within a given season! If that were intended, the puzzle would have been written "In January 6th" instead of "On January, on the 6th"; the latter clearly implies that the date serves a different purpose than the month.</p>
 
   <center>
-  <table class="table sol-table table-sm">
-    <thead style="font-weight: bold;">
-      <tr><td>Season</td><td>Episode</td><td>Episode title</td><td>Index</td></tr>
-    </thead>
-    <tbody>
-      <tr><td>1 (Jan)</td><td>s1e05</td><td><span class='sol-hl-r'>D</span>AMNED IF YOU DO</td><td>6</td></tr>
-      <tr><td>5 (May)</td><td>s5e22</td><td>HOUSE DIV<span class='sol-hl-r'>I</span>DED</td><td>9</td></tr>
-      <tr><td>2 (Feb)</td><td>s2e06</td><td><span class='sol-hl-r'>S</span>PIN</td><td>1</td></tr>
-      <tr><td>5 (May)</td><td>s5e23</td><td>UND<span class='sol-hl-r'>E</span>R MY SKIN</td><td>4</td></tr>
-      <tr><td>8 (Aug)</td><td>s8e08</td><td>PERILS OF PAR<span class='sol-hl-r'>A</span>NOIA</td><td>12</td></tr>
-      <tr><td>1 (Jan)</td><td>s1e08</td><td>POI<span class='sol-hl-r'>S</span>ON</td><td>4</td></tr>
-      <tr><td>7 (Jul)</td><td>s7e08</td><td>SMALL SACRIFIC<span class='sol-hl-r'>E</span>S</td><td>14</td></tr>
-      <tr><td>3 (Mar)</td><td>s3e22</td><td>RES<span class='sol-hl-r'>I</span>GNATION</td><td>4</td></tr>
-      <tr><td>7 (Jul)</td><td>s7e20</td><td>CHA<span class='sol-hl-r'>N</span>GES</td><td>4</td></tr>
-      <tr><td>2 (Feb)</td><td>s2e13</td><td>SKIN <span class='sol-hl-r'>D</span>EEP</td><td>5</td></tr>
-      <tr><td>7 (Jul)</td><td>s7e17</td><td>FALL FROM GRAC<span class='sol-hl-r'>E</span></td><td>13</td></tr>
-      <tr><td>7 (Jul)</td><td>s7e21</td><td>THE FI<span class='sol-hl-r'>X</span></td><td>6</td></tr>
-      <tr><td>4 (Apr)</td><td>s4e11</td><td>FRO<span class='sol-hl-r'>Z</span>EN</td><td>4</td></tr>
-      <tr><td>2 (Feb)</td><td>s2e15</td><td>CLUELE<span class='sol-hl-r'>S</span>S</td><td>7</td></tr>
-      <tr><td>3 (Mar)</td><td>s3e13</td><td>NEEDLE IN A HAYSTA<span class='sol-hl-r'>C</span>K</td><td>16</td></tr>
-      <tr><td>8 (Aug)</td><td>s8e19</td><td>THE C W<span class='sol-hl-r'>O</span>RD</td><td>6</td></tr>
-      <tr><td>6 (Jun)</td><td>s6e05</td><td>BRAVE HEA<span class='sol-hl-r'>R</span>T</td><td>9</td></tr>
-      <tr><td>6 (Jun)</td><td>s6e19</td><td>TH<span class='sol-hl-r'>E</span> CHOICE</td><td>3</td></tr>
-    </tbody>
-  </table>
+    <div class="table-responsive-sm">
+      <table class="table sol-table table-sm">
+        <thead style="font-weight: bold;">
+          <tr><td>Season</td><td>Episode</td><td>Episode title</td><td>Index</td></tr>
+        </thead>
+        <tbody>
+          <tr><td>1 (Jan)</td><td>s1e05</td><td><span class='sol-hl-r'>D</span>AMNED IF YOU DO</td><td>6</td></tr>
+          <tr><td>5 (May)</td><td>s5e22</td><td>HOUSE DIV<span class='sol-hl-r'>I</span>DED</td><td>9</td></tr>
+          <tr><td>2 (Feb)</td><td>s2e06</td><td><span class='sol-hl-r'>S</span>PIN</td><td>1</td></tr>
+          <tr><td>5 (May)</td><td>s5e23</td><td>UND<span class='sol-hl-r'>E</span>R MY SKIN</td><td>4</td></tr>
+          <tr><td>8 (Aug)</td><td>s8e08</td><td>PERILS OF PAR<span class='sol-hl-r'>A</span>NOIA</td><td>12</td></tr>
+          <tr><td>1 (Jan)</td><td>s1e08</td><td>POI<span class='sol-hl-r'>S</span>ON</td><td>4</td></tr>
+          <tr><td>7 (Jul)</td><td>s7e08</td><td>SMALL SACRIFIC<span class='sol-hl-r'>E</span>S</td><td>14</td></tr>
+          <tr><td>3 (Mar)</td><td>s3e22</td><td>RES<span class='sol-hl-r'>I</span>GNATION</td><td>4</td></tr>
+          <tr><td>7 (Jul)</td><td>s7e20</td><td>CHA<span class='sol-hl-r'>N</span>GES</td><td>4</td></tr>
+          <tr><td>2 (Feb)</td><td>s2e13</td><td>SKIN <span class='sol-hl-r'>D</span>EEP</td><td>5</td></tr>
+          <tr><td>7 (Jul)</td><td>s7e17</td><td>FALL FROM GRAC<span class='sol-hl-r'>E</span></td><td>13</td></tr>
+          <tr><td>7 (Jul)</td><td>s7e21</td><td>THE FI<span class='sol-hl-r'>X</span></td><td>6</td></tr>
+          <tr><td>4 (Apr)</td><td>s4e11</td><td>FRO<span class='sol-hl-r'>Z</span>EN</td><td>4</td></tr>
+          <tr><td>2 (Feb)</td><td>s2e15</td><td>CLUELE<span class='sol-hl-r'>S</span>S</td><td>7</td></tr>
+          <tr><td>3 (Mar)</td><td>s3e13</td><td>NEEDLE IN A HAYSTA<span class='sol-hl-r'>C</span>K</td><td>16</td></tr>
+          <tr><td>8 (Aug)</td><td>s8e19</td><td>THE C W<span class='sol-hl-r'>O</span>RD</td><td>6</td></tr>
+          <tr><td>6 (Jun)</td><td>s6e05</td><td>BRAVE HEA<span class='sol-hl-r'>R</span>T</td><td>9</td></tr>
+          <tr><td>6 (Jun)</td><td>s6e19</td><td>TH<span class='sol-hl-r'>E</span> CHOICE</td><td>3</td></tr>
+        </tbody>
+      </table>
+    </div>
   </center>
 
   <p>The extracted clue phrase is <b>DISEASE INDEX Z SCORE</b>. This is not yet a final clue, but rather an instruction for the next step. Each House episode has a principal diagnosis, for which the House Wiki assigns a "zebra factor". This "Z score", if you will, rates how rare/unlikely a diagnosis is. (Interestingly, the term "zebra" meaning rare disease is coined by Shem's <font style='font-style:italic;'>The House of God</font>)</p>
