--- a/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
+++ b/MDSCProj/MDSCApp/templates/MDSCApp/puzzlePages/sol4.html
@@ -31,7 +31,7 @@
 
   <p>The next step is to identify the 18 episodes. To help, notice that the student's placement lasted 8 months, while House MD had 8 seaseons. Hence, the months correspond to the seasons where the episodes took place. Using the <a href="https://house.fandom.com/wiki/House_Wiki" target="_blank">House Wiki resource</a>, we now identify all 18 episodes from the episode synopses on the wiki, noting that we only need to search the episodes within the given season.</p>
 
-  <p>The "date" is an index we apply on the episode titles to extract letters. Note that this "date" does NOT correspond to the episode number within a given season! If that were intended, the puzzle would have been written "In January 6th" instead of "On January, on the 6th"; the latter clearly implies that the date serves a different purpose than the month.</p>
+  <p>The "date" is an index we apply on the episode titles to extract letters. Note that this "date" does NOT correspond to the episode number within a given season! (If that were intended, the puzzle would have been written "On January 6th" instead of "In January, on the 6th"; the latter writing clearly implies that the date serves a different purpose than the month.)</p>
 
   <center>
     <div class="table-responsive-sm">
